2014-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Bug fix for MinGW: do not use mmap.
	Mail from Luigi Scarso <luigi.scarso@gmail.com>

2013-09-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop ACLOCAL_AMFLAGS.
	* configure.ac: Use AC_CONFIG_MACRO_DIRS.

2012-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../../am/reconfig.am and ../../am/rebuild.am.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/Makefile.am: Moved Makefile fragments to ../../am/.

2013-06-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (SUBDIRS): Build the library first.

2013-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Allow subdir-objects.

2012-12-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_BASIC to enable silent rules.

2012-11-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-03-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import zziplib-0.13.62.
	* version.ac: New file defining the zziplib version.
	* Makefile.am, configure.ac: Adapt.

2012-02-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/zzip/Makefile.am: Use ../am/hdr_links.am.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (DISTCLEANFILES): Add _configs.sed.

2011-01-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import zziplib-0.13.60.
	* configure.ac: Adapted.

2010-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import zziplib-0.13.59.
	* configure.ac: Adapted.
	Added AC_SYS_LARGEFILE_SENSITIVE and AC_FUNC_FSEEKO.

2010-02-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Test for <zlib.h> requires to set ZLIB flags.
	Test for <winnt.h> and <winbase.h> needs #include <windows.h>.

2010-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.
